Fix overflow on screen size change

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -7,3 +7,8 @@
   box-sizing: inherit;
   list-style: none;
 }
+
+.App {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
